# medical-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: chain.py  main.py  schemas.py  sessions.py
deploy/: medassist-backend.service  medassist-frontend.service  nginx.conf
frontend/: app.py
ingestion/: build_index.py  sources.py
