[project]
name = "medical-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
]
